@@ -102,6 +102,8 @@ Post-v2.5.0
    - ovs-pki: Changed message digest algorithm from SHA-1 to SHA-512 because
      SHA-1 is no longer secure and some operating systems have started to
      disable it in OpenSSL.
+   - Add 'mtu_request' column to the Interface table. It can be used to
+     configure the MTU of non-internal ports.
 
 
 v2.5.0 - 26 Feb 2016
